--- a/index.html
+++ b/index.html
@@ -52,12 +52,11 @@
             </ul>
         </nav>
     </header>
-
     <!-- Body Content -->
     <main>
         <div class="button-container">
             <button class="kencoin" onclick="location.href='kencoin.html'">Kencoin</button>
-            <button class="spin" onclick="freeSpin()"></button>
+            <button class="spin" onclick="location.href='spin.html'"></button>
             <button class="remotask" onclick="remotask()">Remotask</button>
             <button class="referrals" onclick="referrals()">Referrals</button>
         </div>
