--- a/kencoin.html
+++ b/kencoin.html
@@ -19,7 +19,6 @@
                 <li><a href="#">Contact</a></li>
                 <li><a href="#">About</a></li>
                 <li><a href="#">Account</a></li>
-                <li><a href="#">Follow Us</a></li>
             </ul>
         </nav>
     </header>
@@ -29,25 +28,57 @@
         <h2>Kencoin Investment</h2>
         <div class="machine-container">
             <div class="machine">
+                <img src="machine a.jpeg" alt="">
                 <h3>Machine A</h3>
                 <p>Price: $1000</p>
                 <button onclick="invest('Machine A', 1000)">Invest</button>
             </div>
             <div class="machine">
+                <img src="machine b.jpeg" alt="">
                 <h3>Machine B</h3>
                 <p>Price: $2000</p>
                 <button onclick="invest('Machine B', 2000)">Invest</button>
             </div>
             <div class="machine">
+                <img src="machine c.jpeg" alt="">
                 <h3>Machine C</h3>
                 <p>Price: $3000</p>
                 <button onclick="invest('Machine C', 3000)">Invest</button>
             </div>
+            <div class="machine">
+                <img src="machine d.jpeg" alt="">
+                <h3>Machine D</h3>
+                <p>Price: $4000</p>
+                <button onclick="invest('Machine d', 4000)">Invest</button>
+            </div>
+            <div class="machine">
+                <img src="machine e.jpeg" alt="">
+                <h3>Machine E</h3>
+                <p>Price: $5000</p>
+                <button onclick="invest('Machine E', 5000)">Invest</button>
+            </div>
+            <div class="machine">
+                <img src="machine f.jpeg" alt="">
+                <h3>Machine F</h3>
+                <p>Price: $6000</p>
+                <button onclick="invest('Machine F', 6000)">Invest</button>
+            </div>
+            <div class="machine">
+                <img src="machine g.jpeg" alt="">
+                <h3>Machine G</h3>
+                <p>Price: $7000</p>
+                <button onclick="invest('Machine G', 7000)">Invest</button>
+            </div>
+            <div class="machine">
+                <img src="machine g.jpeg" alt="">
+                <h3>Machine H</h3>
+                <p>Price: $8000</p>
+                <button onclick="invest('Machine G', 8000)">Invest</button>
+            </div>
         </div>
         <div class="cart">
-            <h3>Your Cart</h3>
             <ul id="cart-items"></ul>
-            <p>Total: $<span id="cart-total">0</span></p>
+            <p>Total: Ksh.<span id="cart-total">0</span></p>
             <button onclick="checkout()">Checkout</button>
         </div>
     </main>
